Optimized script up to show feedback function

--- a/sources/css/sbplus_fonts.scss
+++ b/sources/css/sbplus_fonts.scss
@@ -21,6 +21,10 @@
 	font-style: normal;
 }
 
+.light {
+    @include opacity( .4 );
+}
+
 .infoIcn:before {
     @include sbplusFonts;
     content: "\e363";
