Fixed quiz image floating

--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -362,6 +362,7 @@ p {
     	
     	.answerArea {
     	
+    	    display: inline-block;
         	padding: 0 rem( $gutter );
         	margin: rem( $gutter ) 0;
         	
