Moved zoom to the controls; updated audio player

--- a/sources/css/sbplus_fonts.scss
+++ b/sources/css/sbplus_fonts.scss
@@ -37,7 +37,7 @@
     content: "\e385";
 }
 
-.magnifyIcon:before {
+#magnifyIcon:before {
     @extend .defaultFontSettings;
     content: "\e1bc";
 }
