Minor CSS adjustments

--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -294,6 +294,7 @@ p {
             width: 410px;
             margin-right: rem( $gutter );
     	    float: left;
+    	    cursor: default;
     	}
     	
     	#instructorName {
