--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -72,10 +72,6 @@ p {
             border-right: none;
         }
         
-        #fontMinusBtn, #fontPlusBtn, #fontSizeIndicator {
-            display: none;
-        }
-        
     }
     
     #toc {
@@ -99,10 +95,6 @@ p {
         #magnifyBtn {
             width: rem( 51px );
             border-right: none;
-        }
-        
-        #fontMinusBtn, #fontPlusBtn, #fontSizeIndicator {
-            display: none;
         }
         
     }
@@ -164,20 +156,10 @@ p {
     
     #control {
         
-        width: rem( 900px );
-        
-        #currentStatus {
-        	width: 72%;
-        }
+        /* width: rem( 900px ); */
         
         #leftBtn {
             border-left: 1px solid #ccc;
-        }
-        
-        #fontMinusBtn,
-        #fontSizeIndicator,
-        #fontPlusBtn {
-            display: none;
         }
         
         #magnifyBtn {
@@ -611,113 +593,6 @@ p {
         }
     	
     } // #note
-    
-    #note.size12 {
-        
-        h1 {
-        	font-size: rem( 18px );
-        	line-height: rem( 24px );
-    	}
-    	
-    	h2 {
-        	font-size: rem( 16px );
-            line-height: rem( 22px );
-    	}
-    	
-    	h3, h4, h5, h6 {
-        	font-size: rem( 14px );
-        	line-height: rem( 20px );
-        }
-    	
-    	p {
-        	font-size: rem( 12px );
-        	line-height: rem( 18px );
-        }
-        
-    }
-    
-    #note.size16 {
-        
-        h1 {
-        	font-size: rem( 22px );
-        	line-height: rem( 28px );
-    	}
-    	
-    	h2 {
-        	font-size: rem( 20px );
-            line-height: rem( 26px );
-    	}
-    	
-    	h3, h4, h5, h6 {
-        	font-size: rem( 18px );
-        	line-height: rem( 24px );
-        }
-    	
-    	p {
-        	font-size: rem( 16px );
-        	line-height: rem( 22px );
-        }
-    }
-        
-    #note.size18 {
-        
-        h1 {
-        	font-size: rem( 24px );
-        	line-height: rem( 30px );
-    	}
-    	
-    	h2 {
-        	font-size: rem( 22px );
-            line-height: rem( 28px );
-    	}
-    	
-    	h3, h4, h5, h6 {
-        	font-size: rem( 20px );
-        	line-height: rem( 26px );
-        }
-    	
-    	p {
-        	font-size: rem( 18px );
-        	line-height: rem( 24px );
-        }
-        
-    }
-    
-    #note.size20 {
-        
-        h1 {
-        	font-size: rem( 26px );
-        	line-height: rem( 32px );
-    	}
-    	
-    	h2 {
-        	font-size: rem( 24px );
-            line-height: rem( 30px );
-    	}
-    	
-    	h3, h4, h5, h6 {
-        	font-size: rem( 22px );
-        	line-height: rem( 28px );
-        }
-    	
-    	p {
-        	font-size: rem( 20px );
-        	line-height: rem( 26px );
-        }
-        
-    }
-    
-    /*
-#note.cropped {
-    
-        height: rem( 116px );
-        
-        .noNotes {
-            padding-top: rem( 30px );
-        }
-        
-    }
-*/
 	
 	// PLAYER CONTROLS
     #control {
@@ -760,7 +635,7 @@ p {
     	
     	#currentStatus {
         	display: block;
-        	width: 48%;
+        	width: 72%;
         	height: rem( 38px );
         	font-size: rem( 16px );
         	font-weight: bold;
@@ -777,39 +652,8 @@ p {
         	width: 8%;
             font-size: rem( 16px );
             line-height: rem( 16px );
-            border-left: 1px solid #ccc;
             border-right: none;
             padding: rem( 12px ) 0 0;
-        }
-        
-        #fontMinusBtn {
-            @extend .btn;
-            width: 8%;
-            font-size: rem( 16px );
-            line-height: rem( 16px );
-            padding: rem( 12px ) 0 0;
-        }
-        
-        #fontSizeIndicator {
-        	display: block;
-        	width: 8%;
-        	height: rem( 38px );
-        	font-size: rem( 16px );
-        	text-align: center;
-        	padding-top: rem( 13px );
-        	border-right: #ccc solid rem( 1px );
-        	cursor: default;
-        	float: left;
-        	@include box-sizing( "border-box" );
-        }
-        
-        #fontPlusBtn {
-            @extend .btn;
-            width: 8%;
-            font-size: rem( 16px );
-            line-height: rem( 16px );
-            padding: rem( 11px ) 0 0;
-            border-right: none;
         }
     	
     } //#control
